store/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: store-ingress
  namespace: sock-shop 
  #app: sock-store
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: store.beepbeepboop.org
#  - host: a98eed759483c11eabf6d02678870623-1910790640.us-east-1.elb.amazonaws.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end 
          servicePort: 80
